--- a/MainDash/Dash.html
+++ b/MainDash/Dash.html
@@ -912,13 +912,13 @@
                           <div>
                             <p class="font-semibold">Dave Li</p>
                             <p class="text-xs text-gray-600 dark:text-gray-400">
-                              Influencer
+                              Não Registrado
                             </p>
                           </div>
                         </div>
                       </td>
                       <td class="px-4 py-3 text-sm">
-                        $ 863.45
+                        $ 50.45
                       </td>
                       <td class="px-4 py-3 text-xs">
                         <span
@@ -953,13 +953,13 @@
                           <div>
                             <p class="font-semibold">Maria Ramovic</p>
                             <p class="text-xs text-gray-600 dark:text-gray-400">
-                              Runner
+                              Não registrado
                             </p>
                           </div>
                         </div>
                       </td>
                       <td class="px-4 py-3 text-sm">
-                        $ 863.45
+                        $ 200.45
                       </td>
                       <td class="px-4 py-3 text-xs">
                         <span
@@ -994,7 +994,7 @@
                           <div>
                             <p class="font-semibold">Hitney Wouston</p>
                             <p class="text-xs text-gray-600 dark:text-gray-400">
-                              Singer
+                              Nutricionista
                             </p>
                           </div>
                         </div>
@@ -1035,13 +1035,13 @@
                           <div>
                             <p class="font-semibold">Hans Burger</p>
                             <p class="text-xs text-gray-600 dark:text-gray-400">
-                              10x Developer
+                              Nutricionista
                             </p>
                           </div>
                         </div>
                       </td>
                       <td class="px-4 py-3 text-sm">
-                        $ 863.45
+                        $ 120.45
                       </td>
                       <td class="px-4 py-3 text-xs">
                         <span
